--- a/config_landsat.cfg
+++ b/config_landsat.cfg
@@ -1,5 +1,5 @@
 serveur = https://theia-landsat.cnes.fr
 resto = resto
 token_type = json
-login_theia = login_theia
-password_theia = passwd_theia
+login_theia = LOGUIN_THEAI
+password_theia = PASSWD_THEIA
