--- a/config_theia.cfg
+++ b/config_theia.cfg
@@ -1,5 +1,5 @@
 serveur = https://theia.cnes.fr/atdistrib
 resto = resto2
 token_type = text
-login_theia = login_theia 
-password_theia = passwd_theia
+login_theia = LOGUIN_THEAI
+password_theia = PASSWD_THEIA
