--- a/config_landsat.cfg
+++ b/config_landsat.cfg
@@ -1,5 +1,5 @@
 serveur = https://theia-landsat.cnes.fr
 resto = resto
 token_type = json
-login_theia = LOGUIN_THEAI
+login_theia = LOGUIN_THEIA
 password_theia = PASSWD_THEIA
