--- a/config_theia.cfg
+++ b/config_theia.cfg
@@ -1,5 +1,5 @@
 serveur = https://theia.cnes.fr/atdistrib
 resto = resto2
 token_type = text
-login_theia = LOGUIN_THEAI
+login_theia = LOGUIN_THEIA
 password_theia = PASSWD_THEIA
